...
  val colorScheme = MaterialTheme.colorScheme

  Column(
      Modifier.fillMaxSize()
          .background(colorScheme.background)
          .padding(16.dp)
          .testTag("CreateDeckScreenRoot")) {
        Row(horizontalArrangement = Arrangement.SpaceBetween, modifier = Modifier.fillMaxWidth()) {
          Text(
              "New Deck",
              style = MaterialTheme.typography.headlineMedium,
              color = colorScheme.primary)
          TextButton(
...
